# bookstore

./: db.sqlite3  pyproject.toml
bookstore/: settings.py
order/: admin.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: __init__.py  order_serializers.py
product/: admin.py
product/migrations/: 0001_initial.py
product/models/: category.py
product/serializers/: __init__.py  category_serializers.py  product_serializers.py
